--- a/BigSchool/Views/Courses/Create.cshtml
+++ b/BigSchool/Views/Courses/Create.cshtml
@@ -7,9 +7,10 @@
 
 <h2>Create</h2>
 
-<form>
+
 @using (Html.BeginForm("Create", "Courses"))
 {
+    @Html.AntiForgeryToken()
     <div class="form-group">
         @Html.LabelFor(m => m.Place)
         @Html.TextBoxFor(m => m.Place, new { @class = "form-control" })
@@ -39,5 +40,9 @@
     <div class="form-group"></div>
     <div class="form-group"></div>
 }
-</form>
+@section scripts
+{
+    @Scripts.Render("~/bundles/jqueryval");
+    }
+
 
