--- a/BigSchool/Views/Home/Index.cshtml
+++ b/BigSchool/Views/Home/Index.cshtml
@@ -4,9 +4,8 @@
 }
 
 <div class="jumbotron" style="background-image : url('../../Content/Images/banner web(7).jpg'); background-size:auto">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>BIG SCHOOL</h1>
+    
 </div>
 
 <div class="row">
@@ -25,14 +24,54 @@
                 <div class="details">
                     <span class="lecturer">
                         @course.Lecturer.Name
+                        <button class="btn btn-default btn-sm js-toggle-follow" data-user-id="@course.LecturerId">
+                            Follow
+                        </button>
                     </span>
                     <span class="category">
-                        @course.Category.Name
+                        @course.category.Name
                     </span>
+                    <button data-course-id="@course.Id" class="btn btn-default btn-sm js-toggle-attendance">Going?</button>
                 </div>
             </li>
         }
-
     </ul>
+
+    @section scripts
+    {
+        <script>
+            $(document.ready(function () {
+                $(".js-toggle-attendance").click(function (e) {
+                    var button = $(e.target);
+                    $.post("/api/attendances", { courseId: button.attr("data-course-id") })
+                    .done(function (){
+                        button
+                        .removeClass("btn-default")
+                        .addClass("btn-info")
+                        .text("Going");
+                    })
+                    .fail(function() {
+                        alert("something failed!");
+                    });
+                });
+               
+                $(".js-toggle-follow").click(function (e) {
+                    var button = $(e.target);
+                    $.post("/api/followings", { followeeId: button.attr("data-user-id") })
+                    .done(function (){
+                        button
+                        .text("Following");
+                    })
+                    .fail(function() {
+                        alert("something failed!");
+                    });
+                });
+            }))
+        
+
+        
+        
+        </script>
+        }
    
 </div>
