--- a/BigSchool/Views/Home/Index.cshtml
+++ b/BigSchool/Views/Home/Index.cshtml
@@ -36,42 +36,37 @@
             </li>
         }
     </ul>
-
-    @section scripts
-    {
-        <script>
-            $(document.ready(function () {
-                $(".js-toggle-attendance").click(function (e) {
-                    var button = $(e.target);
-                    $.post("/api/attendances", { courseId: button.attr("data-course-id") })
-                    .done(function (){
-                        button
-                        .removeClass("btn-default")
-                        .addClass("btn-info")
-                        .text("Going");
-                    })
-                    .fail(function() {
-                        alert("something failed!");
-                    });
-                });
-               
-                $(".js-toggle-follow").click(function (e) {
-                    var button = $(e.target);
-                    $.post("/api/followings", { followeeId: button.attr("data-user-id") })
-                    .done(function (){
-                        button
-                        .text("Following");
-                    })
-                    .fail(function() {
-                        alert("something failed!");
-                    });
-                });
-            }))
-        
-
-        
-        
-        </script>
-        }
-   
 </div>
+
+@section scripts
+{
+    <script>
+
+        $(document).ready(function () {
+            $(".js-toggle-attendance").click(function (e) {
+                var button = $(e.target);
+                $.post("/api/attendances", { CourseId: button.attr("data-course-id") }).done(function () {
+                    button
+                    .removeClass("btn-default")
+                    .addClass("btn-info")
+                    .text("Going")
+                })
+                .fail(function () {
+                    alert("Something fail");
+                });
+            });
+            $(".js-toggle-follow").click(function (e) {
+                var button = $(e.target);
+                $.post("/api/followings", { FolloweeId: button.attr("data-user-id") }).done(function () {
+                    button
+                    .text("Following")
+                })
+                .fail(function () {
+                    alert("Something fail");
+                });
+            });
+        });
+
+    </script>
+
+}
